add head content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+<head>
+	<meta charset="UTF-8">
+	<title>Hiking USA</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+</body>
 </html>
