--- a/index.html
+++ b/index.html
@@ -8,5 +8,36 @@
 </head>
 
 <body>
+	
+	<header>
+		<div>
+			<img src="img/logo.png" alt="logo">
+			<p>Hiking and Camping Club</p>
+		</div>
+	</header>
+	
+	<section>
+		<img src="img/banner-1.jpg" alt="man hiking on mountain crest">
+		<h1>Open new spaces in your area!</h1>
+		<button>JOIN</button>
+	</section>
+
+	<section>
+		<h2>Why join our club?</h2>
+		<div>
+			<img src="img/map-icon.png" alt="map icon">
+			<p>A wide range of locations and often unique locations and often unique hiking trip itineraries</p>
+		</div>
+		<div>
+			<img src="img/hiker-icon.png" alt="hiker icon">
+			<p>Meet an extremely active group with hikes every weekend</p>
+		</div>
+		<div>
+			<img src="img/mountain-icon.png" alt="mountain icon">
+			<p>Mountain vistas, pristine lakes, rushing streams, wild rivers</p>
+		</div>
+	</section>
+
+
 </body>
 </html>
