add layout and content for adventures

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</section>
 
 	<section>
-		<h2>Why join our club?</h2>
+		<h2>Why Join Our Club?</h2>
 		<div>
 			<img src="img/map-icon.png" alt="map icon">
 			<p>A wide range of locations and often unique locations and often unique hiking trip itineraries</p>
@@ -35,6 +35,34 @@
 		<div>
 			<img src="img/mountain-icon.png" alt="mountain icon">
 			<p>Mountain vistas, pristine lakes, rushing streams, wild rivers</p>
+		</div>
+	</section>
+	
+	<section>
+		<h2>Our Adventures</h2>
+		<div>
+			<img src="img/rafting.jpg" alt="rafting">
+			<figcaption>
+				<p>Rafting</p>
+			</figcaption>
+		</div>
+		<div>
+			<img src="img/mountain-vistas.jpg" alt="mountain vistas">
+			<figcaption>
+				<p>Mountain vistas</p>
+			</figcaption>
+		</div>
+		<div>
+			<img src="img/fishing.jpg" alt="fishing">
+			<figcaption>
+				<p>Fishing</p>
+			</figcaption>
+		</div>
+		<div>
+			<img src="img/backpacking.jpg" alt="backpacking">
+			<figcaption>
+				<p>Backpacking</p>
+			</figcaption>
 		</div>
 	</section>
 
