add testimonials markup and content

--- a/index.html
+++ b/index.html
@@ -65,6 +65,47 @@
 			</figcaption>
 		</div>
 	</section>
+	
+	<section>
+		<h2>Testimonials</h2>
+		
+		<div>
+			<h2>12/10</h2>
+			<h5>Outdoor activities</h5>
+			<p>Outdoor activity is leisure pursuits engaged in the outdoors, often in natural or semi-natural settings out of town.</p>
+			<button>LEARN MORE</button>
+		</div>
+		<div>
+			<h2>14/10</h2>
+			<h5>Backpacking</h5>
+			<p>Backpacking may include wilderness adventures, local travel and travel to nearby counties while working from the country in which they are based.</p>
+			<button>LEARN MORE</button>
+		</div>
+		<div>
+			<h2>03/11</h2>
+			<h5>Mountaineering</h5>
+			<p>Mountaineering is the sport of attaining, or attempting to attain, high points in mountainous regions, mainly for the pleasure of the climb.</p>
+			<button>LEARN MORE</button>
+		</div>
+		<div>
+			<h2>12/10</h2>
+			<h5>Kayaking</h5>
+			<p>It is distinguished from canoeing by the sitting position of the paddler and the number of blades on the paddle.</p>
+			<button>LEARN MORE</button>
+		</div>
+		<div>
+			<h2>12/12</h2>
+			<h5>Cycling</h5>
+			<p>Cycling is widely regarded as a very effective and efficient mode of transportation optimal for short to moderate distances.</p>
+		</div>
+		<div>
+			<h2>18/12</h2>
+			<h5>Hiking</h5>
+			<p>Hiking is the preferred term for a long, vigorous walk, while the word walking is used for shorter, particularly urban walks.</p>
+			<button>LEARN MORE</button>
+		</div>
+
+	</section>
 
 
 </body>
