--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
 
 	</section>
 
+	<section>
+		<h2>Testimonials</h2>
+		<div>
+			<img src="img/nelson-smith.jpg" alt="Nelson Smith">
+			<p>In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.</p>
+			<p>&#45 Nelson Smith</p>
+		</div>
+		<div>
+			<img src="img/melina-jones.jpg" alt="Melina Jones">
+			<p>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</p>
+			<p>&#45 Melina Jones</p>
+		</div>
+	</section>
+
+	<footer>
+		<i class="fa fa-map-marker" aria-hidden="true"></i>
+	</footer>
+
 
 </body>
 </html>
