add contact info markup and content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hiking USA</title>
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -122,7 +124,14 @@
 	</section>
 
 	<footer>
-		<i class="fa fa-map-marker" aria-hidden="true"></i>
+		<div>
+			<i class="fa fa-map-marker" aria-hidden="true"></i>
+			<p>28 JACKSON BLVD<br>STE 151, CHICAGO<br>IL 60604-2340</p>
+		
+			<i class="fa fa-envelope-o" aria-hidden="true"></i>
+			<p><a href="mailto:mail@demolink.com">mail&#64demolink.com</a></p>
+		</div>
+
 	</footer>
 
 
