add copyright markup and content

--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
 			<p><a href="mailto:mail@demolink.com">mail&#64demolink.com</a></p>
 		</div>
 
+		<div>
+			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
+		</div>
+
 	</footer>
 
 
