--- a/index.html
+++ b/index.html
@@ -124,15 +124,25 @@
 	</section>
 
 	<footer>
-		<div>
+		<address>
 			<i class="fa fa-map-marker" aria-hidden="true"></i>
 			<p>28 JACKSON BLVD<br>STE 151, CHICAGO<br>IL 60604-2340</p>
 		
 			<i class="fa fa-envelope-o" aria-hidden="true"></i>
 			<p><a href="mailto:mail@demolink.com">mail&#64demolink.com</a></p>
-		</div>
+		</address>
 
 		<div>
+			<div>
+				<i class="fa fa-youtube fa-5x" aria-hidden="true"></i>
+				<i class="fa fa-tumblr fa-5x" aria-hidden="true"></i>
+				<i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
+				<i class="fa fa-facebook fa-5x" aria-hidden="true"></i>
+				<i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
+
+
+
+			</div>
 			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 		</div>
 
