--- a/index.html
+++ b/index.html
@@ -42,70 +42,63 @@
 	
 	<section>
 		<h2>Our Adventures</h2>
-		<div>
+		<figure>
 			<img src="img/rafting.jpg" alt="rafting">
-			<figcaption>
-				<p>Rafting</p>
+			<figcaption>Rafting</p>
 			</figcaption>
-		</div>
-		<div>
+		</figure>
+		<figure>
 			<img src="img/mountain-vistas.jpg" alt="mountain vistas">
-			<figcaption>
-				<p>Mountain vistas</p>
-			</figcaption>
-		</div>
-		<div>
+			<figcaption>Mountain vistas</figcaption>
+		</figure>
+		<figure>
 			<img src="img/fishing.jpg" alt="fishing">
-			<figcaption>
-				<p>Fishing</p>
-			</figcaption>
-		</div>
-		<div>
+			<figcaption>Fishing</figcaption>
+		</figure>
+		<figure>
 			<img src="img/backpacking.jpg" alt="backpacking">
-			<figcaption>
-				<p>Backpacking</p>
-			</figcaption>
-		</div>
+			<figcaption>Backpacking</figcaption>
+		</figure>
 	</section>
 	
 	<section>
 		<h2>News &amp; Events</h2>
 		
-		<div>
-			<h2>12/10</h2>
-			<h5>Outdoor activities</h5>
+		<article>
+			<h3>12/10</h3>
+			<h4>Outdoor activities</h4>
 			<p>Outdoor activity is leisure pursuits engaged in the outdoors, often in natural or semi-natural settings out of town.</p>
 			<button>LEARN MORE</button>
-		</div>
-		<div>
-			<h2>14/10</h2>
-			<h5>Backpacking</h5>
+		</article>
+		<article>
+			<h3>14/10</h3>
+			<h4>Backpacking</h4>
 			<p>Backpacking may include wilderness adventures, local travel and travel to nearby counties while working from the country in which they are based.</p>
 			<button>LEARN MORE</button>
-		</div>
-		<div>
-			<h2>03/11</h2>
-			<h5>Mountaineering</h5>
+		</article>
+		<article>
+			<h3>03/11</h3>
+			<h4>Mountaineering</h4>
 			<p>Mountaineering is the sport of attaining, or attempting to attain, high points in mountainous regions, mainly for the pleasure of the climb.</p>
 			<button>LEARN MORE</button>
-		</div>
-		<div>
-			<h2>12/10</h2>
-			<h5>Kayaking</h5>
+		</article>
+		<article>
+			<h3>12/10</h3>
+			<h4>Kayaking</h4>
 			<p>It is distinguished from canoeing by the sitting position of the paddler and the number of blades on the paddle.</p>
 			<button>LEARN MORE</button>
-		</div>
-		<div>
-			<h2>12/12</h2>
-			<h5>Cycling</h5>
+		</article>
+		<article>
+			<h3>12/12</h3>
+			<h4>Cycling</h4>
 			<p>Cycling is widely regarded as a very effective and efficient mode of transportation optimal for short to moderate distances.</p>
-		</div>
-		<div>
-			<h2>18/12</h2>
-			<h5>Hiking</h5>
+		</article>
+		<article>
+			<h3>18/12</h3>
+			<h4>Hiking</h4>
 			<p>Hiking is the preferred term for a long, vigorous walk, while the word walking is used for shorter, particularly urban walks.</p>
 			<button>LEARN MORE</button>
-		</div>
+		</article>
 
 	</section>
 
@@ -113,39 +106,38 @@
 		<h2>Testimonials</h2>
 		<div>
 			<img src="img/nelson-smith.jpg" alt="Nelson Smith">
-			<p>In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.</p>
-			<p>&#45 Nelson Smith</p>
+			<blockquote>
+				<p>In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.</p>
+				<p>&#45 Nelson Smith</p>
+			</blockquote>
 		</div>
 		<div>
 			<img src="img/melina-jones.jpg" alt="Melina Jones">
-			<p>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</p>
-			<p>&#45 Melina Jones</p>
+			<blockquote>
+				<p>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</p>
+				<p>&#45 Melina Jones</p>
+			</blockquote>
 		</div>
 	</section>
 
 	<footer>
 		<address>
-			<i class="fa fa-map-marker" aria-hidden="true"></i>
+			<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
 			<p>28 JACKSON BLVD<br>STE 151, CHICAGO<br>IL 60604-2340</p>
 		
-			<i class="fa fa-envelope-o" aria-hidden="true"></i>
+			<i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
 			<p><a href="mailto:mail@demolink.com">mail&#64demolink.com</a></p>
 		</address>
 
-		<div>
-			<div>
-				<i class="fa fa-youtube fa-5x" aria-hidden="true"></i>
-				<i class="fa fa-tumblr fa-5x" aria-hidden="true"></i>
-				<i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
-				<i class="fa fa-facebook fa-5x" aria-hidden="true"></i>
-				<i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
-
-
-
-			</div>
-			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
-		</div>
-
+		<ul>
+			<li><i class="fa fa-youtube fa-4x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-tumblr fa-4x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-twitter fa-4x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-facebook fa-4x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
+		</ul>
+		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
+		
 	</footer>
 
 
