replace buttons with a tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<section>
 		<img src="img/banner-1.jpg" alt="man hiking on mountain crest">
 		<h1>Open new spaces in your area!</h1>
-		<button>JOIN</button>
+		<a href="#">JOIN</a>
 	</section>
 
 	<section>
@@ -68,36 +68,37 @@
 			<h3>12/10</h3>
 			<h4>Outdoor activities</h4>
 			<p>Outdoor activity is leisure pursuits engaged in the outdoors, often in natural or semi-natural settings out of town.</p>
-			<button>LEARN MORE</button>
+			<a href="#">LEARN MORE</a>
 		</article>
 		<article>
 			<h3>14/10</h3>
 			<h4>Backpacking</h4>
 			<p>Backpacking may include wilderness adventures, local travel and travel to nearby counties while working from the country in which they are based.</p>
-			<button>LEARN MORE</button>
+			<a href="#">LEARN MORE</a>
 		</article>
 		<article>
 			<h3>03/11</h3>
 			<h4>Mountaineering</h4>
 			<p>Mountaineering is the sport of attaining, or attempting to attain, high points in mountainous regions, mainly for the pleasure of the climb.</p>
-			<button>LEARN MORE</button>
+			<a href="#">LEARN MORE</a>
 		</article>
 		<article>
 			<h3>12/10</h3>
 			<h4>Kayaking</h4>
 			<p>It is distinguished from canoeing by the sitting position of the paddler and the number of blades on the paddle.</p>
-			<button>LEARN MORE</button>
+			<a href="#">LEARN MORE</a>
 		</article>
 		<article>
 			<h3>12/12</h3>
 			<h4>Cycling</h4>
 			<p>Cycling is widely regarded as a very effective and efficient mode of transportation optimal for short to moderate distances.</p>
+			<a href="#">LEARN MORE</a>
 		</article>
 		<article>
 			<h3>18/12</h3>
 			<h4>Hiking</h4>
 			<p>Hiking is the preferred term for a long, vigorous walk, while the word walking is used for shorter, particularly urban walks.</p>
-			<button>LEARN MORE</button>
+			<a href="#">LEARN MORE</a>
 		</article>
 
 	</section>
