WIP about page basic info

--- a/about.html
+++ b/about.html
@@ -6,5 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<section>
+		<h1>About Club</h1>
+		<img>
+		<h2>Information about us</h2>
+		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
+	</section>
+		<h1>Our History</h1>
+		<
+	<section>
+	</section>
+		<h1>Our Mission</h1>
+	<section>
+	</section>
 </body>
 </html>
