add basic history section to about page

--- a/about.html
+++ b/about.html
@@ -12,10 +12,30 @@
 		<h2>Information about us</h2>
 		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
 	</section>
-		<h1>Our History</h1>
-		<
 	<section>
+		<h1>Our History</h1>
+		<div>
+			<h2>2010 &#45; </h2>
+			<p>It was the first time we saw social media used in a substantial way to challenge us and ask questions.</p>
+		</div>
+		<div>
+			<h2>2012 &#45; </h2>
+			<p>We voluntarily submitted out policies and procedures to the Committee for independent review and became the first manufacturer.</p>
+		</div>
+		<div>
+			<h2>2013 &#45; </h2>
+			<p>Our club acquired several companies in a strategic move to enhance our position on the global market.</p>
+		</div>
+		<div>	
+			<h2>2014 &#45; </h2>
+			<p>We acquired a US-based company with an innovative portfolio of products for use under supervision.</p>
+		</div>
+		<div>	
+			<h2>2015 &#45; </h2>
+			<p>We extended our activities to include the field of specialized items meeting the world's increasing needs.</p>
+		</div>
 	</section>
+	<section>
 		<h1>Our Mission</h1>
 	<section>
 	</section>
