add basic mission to about page

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hiking USA</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -37,6 +38,29 @@
 	</section>
 	<section>
 		<h1>Our Mission</h1>
+		<h2>Hiking and Camping Club mission:</h2>
+		<p>The Club, as a business, is an extension of who we, the staff, are as people. Climbers. Backpackers. Kayakers. Yoga instructors. Adventurers. We share our love of special places reached through rigorous activity.</p>
+		<p>We realize we are models for our clients behavior. We take minimal impact and Leave No Trace ethics seriously. We never use disposable plates or silverware for our trips, as an example. We strive to keep our group sizes relatively small when rock climbing to minimize our impact on other park users.</p>
+		<ul>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> hiking</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> backpacking</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> camping</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> kayaking</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> cycling</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> mountaineering</i>
+			</li>
+		</ul>
 	<section>
 	</section>
 </body>
