add meet our team section WIP need assets

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 	<section>
 		<h1>About Club</h1>
-		<img>
+		<img src="" alt="">
 		<h2>Information about us</h2>
 		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
 	</section>
@@ -62,6 +62,28 @@
 			</li>
 		</ul>
 	<section>
+		<h1>Meet Our Team</h1>
+		<div>
+			<img src="" alt="Bradley Grosh profile picture">
+			<h2>Bradley Grosh</h2>
+			<p>Instructor</p>
+		</div>
+		<div>
+			<img src="" alt="Dayle Peters profile picture">
+			<h2>Dayle Peters</h2>
+			<p>Instructor</p>
+		</div>
+		<div>
+			<img src="" alt="Mark Johnson profile picture">
+			<h2>Mark Johnson</h2>
+			<p>Instructor</p>
+		</div>
+		<div>
+			<img src="" alt="Edna Barton profile picture">
+			<h2>Edna Barton</h2>
+			<p>Instructor</p>
+		</div>
+
 	</section>
 </body>
 </html>
