--- a/about.html
+++ b/about.html
@@ -61,6 +61,8 @@
 				<i class="fa fa-chevron-right" aria-hidden="true"> mountaineering</i>
 			</li>
 		</ul>
+	</section>
+	
 	<section>
 		<h1>Meet Our Team</h1>
 		<div>
@@ -83,7 +85,6 @@
 			<h2>Edna Barton</h2>
 			<p>Instructor</p>
 		</div>
-
 	</section>
 </body>
 </html>
