add advantages and advice sections to about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 	<section>
 		<h1>About Club</h1>
-		<img src="" alt="">
+		<img src="" alt="Hiker in the woods">
 		<h2>Information about us</h2>
 		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
 	</section>
@@ -86,5 +86,57 @@
 			<p>Instructor</p>
 		</div>
 	</section>
+
+	<section>
+		<h1>Our Advantages</h1>
+		<div>
+			<h2><span>1</span> Security</h2>
+			<p>Club has made significant investments to build a state-of-the-art security platform.</p>
+		</div>
+		<div>
+			<h2><span>2</span> Cost management</h2>
+			<p>With our Company, you can be confident that your needs will be met.</p>
+		</div>
+		<div>
+			<h2><span>3</span> Advanced technology</h2>
+			<p>Club is one of the largest providers of a variety of services technology to governmental agencies.</p>
+		</div>
+	</section>
+
+	<section>
+		<h1>Advice</h1>
+		<h2>Please read attentively</h2>
+		<p>We gathered all recently asked questions, please read them attentively, especially if you have never hiked in your life:</p>
+		<ul>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Water Up!</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Cheap Bottles</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Lightweight Backpacking Food</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Coaxing Reluctant Camp Fires</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Pack Food Storage</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> FOOD: Try Meals Before Backpacking</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> 10+ Essentials For Hiking</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Fight Gravity's Drag</i>
+			</li>
+			<li>
+				<i class="fa fa-chevron-right" aria-hidden="true"> Fire Starters</i>
+			</li>
+		</ul>
+	</section>
+
 </body>
 </html>
