--- a/about.html
+++ b/about.html
@@ -137,6 +137,13 @@
 			</li>
 		</ul>
 	</section>
+	<section>
+		<h1>Testimonials</h1>
+		<blockquote>
+			"A great time and value. Set in a beautiful area of the park. An experience to remember for a lifetime for not only myself, but my kids and their cousins as well!"
+			<p>Mark Johnson</p>
+		</blockquote>
+	</section>
 
 </body>
 </html>
