--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
 		<div>
 			<img src="img/nelson-smith.jpg" alt="Nelson Smith">
 			<blockquote>
-				<p>In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.</p>
+				In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.
 				<p>&#45 Nelson Smith</p>
 			</blockquote>
 		</div>
 		<div>
 			<img src="img/melina-jones.jpg" alt="Melina Jones">
 			<blockquote>
-				<p>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</p>
+				This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.
 				<p>&#45 Melina Jones</p>
 			</blockquote>
 		</div>
@@ -140,7 +140,6 @@
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 		
 	</footer>
-
 
 </body>
 </html>
