--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 		<img src="" alt="Hiker in the woods">
 		<h2>Information about us</h2>
 		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
+		<p>When the Web didn't seem to offer any answers, we decided to use her web development knowledge to form an online meeting and information place for a club.</p>
 	</section>
 	<section>
 		<h1>Our History</h1>
