add images for about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 	<section>
 		<h1>About Club</h1>
-		<img src="" alt="Hiker in the woods">
+		<img src="img/hiker_in_woods.jpg" alt="Hiker in the woods">
 		<h2>Information about us</h2>
 		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
 		<p>When the Web didn't seem to offer any answers, we decided to use her web development knowledge to form an online meeting and information place for a club.</p>
@@ -67,22 +67,22 @@
 	<section>
 		<h1>Meet Our Team</h1>
 		<div>
-			<img src="" alt="Bradley Grosh profile picture">
+			<img src="img/bradley.jpg" alt="Bradley Grosh profile picture">
 			<h2>Bradley Grosh</h2>
 			<p>Instructor</p>
 		</div>
 		<div>
-			<img src="" alt="Dayle Peters profile picture">
+			<img src="img/dayle.jpg" alt="Dayle Peters profile picture">
 			<h2>Dayle Peters</h2>
 			<p>Instructor</p>
 		</div>
 		<div>
-			<img src="" alt="Mark Johnson profile picture">
+			<img src="img/mark.jpg" alt="Mark Johnson profile picture">
 			<h2>Mark Johnson</h2>
 			<p>Instructor</p>
 		</div>
 		<div>
-			<img src="" alt="Edna Barton profile picture">
+			<img src="img/edna.jpg" alt="Edna Barton profile picture">
 			<h2>Edna Barton</h2>
 			<p>Instructor</p>
 		</div>
