WIP change advantages to ol

--- a/about.html
+++ b/about.html
@@ -90,7 +90,21 @@
 
 	<section>
 		<h1>Our Advantages</h1>
-		<div>
+		<ol>
+			<li>
+				<h2>Security</h2>
+				<p>Club has made significant investments to build a state-of-the-art security platform.</p>
+			</li>
+			<li>
+				<h2>Cost management</h2>
+				<p>With our Company, you can be confident that your needs will be met.</p>
+			</li>
+			<li>
+				<h2>Advanced technology</h2>
+				<p>Club is one of the largest providers of a variety of services technology to governmental agencies.</p>
+			</li>
+		</ol>
+		<!-- <div>
 			<h2><span>1</span> Security</h2>
 			<p>Club has made significant investments to build a state-of-the-art security platform.</p>
 		</div>
@@ -101,7 +115,7 @@
 		<div>
 			<h2><span>3</span> Advanced technology</h2>
 			<p>Club is one of the largest providers of a variety of services technology to governmental agencies.</p>
-		</div>
+		</div> -->
 	</section>
 
 	<section>
