Add header navigation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 			<img src="img/logo.png" alt="logo">
 			<p>Hiking and Camping Club</p>
 		</div>
+		<ul>
+			<li>Home</li>
+			<li>About Club</li>
+		</ul>
 	</header>
 	
 	<section>
