add header navigation to about page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<header>
+		<div>
+			<img src="img/logo.png" alt="logo">
+			<p>Hiking and Camping Club</p>
+		</div>
+		<ul>
+			<li>Home</li>
+			<li>About Club</li>
+		</ul>
+	</header>
 	<section>
 		<h1>About Club</h1>
 		<img src="img/hiker_in_woods.jpg" alt="Hiker in the woods">
