add nav links for home page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<p>Hiking and Camping Club</p>
 		</div>
 		<ul>
-			<li>Home</li>
-			<li>About Club</li>
+			<li><a href="#">Home</a></li>
+			<li><a href="about.html">About Club</a></li>
 		</ul>
 	</header>
 	
