add nav links for about page

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 			<p>Hiking and Camping Club</p>
 		</div>
 		<ul>
-			<li>Home</li>
-			<li>About Club</li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="#">About Club</a></li>
 		</ul>
 	</header>
 	<section>
