add bottom navigation with links to home page

--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
 		</div>
 	</section>
 
-	<footer>
+	<section>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="about.html">About Club</a></li>
+		</ul>
 		<address>
 			<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
 			<p>28 JACKSON BLVD<br>STE 151, CHICAGO<br>IL 60604-2340</p>
@@ -143,7 +147,7 @@
 		</ul>
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 		
-	</footer>
+	</section>
 
 </body>
 </html>
