add trip to home page bottom navigation

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="about.html">About Club</a></li>
+			<li><a href="trips.html">Trip Schedule</a></li>
 		</ul>
 		<address>
 			<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
