add trip to top navigation on about page

--- a/about.html
+++ b/about.html
@@ -16,6 +16,21 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="#">About Club</a></li>
+			<li><a href="trips.html">Trip Schedule</a>
+				<ul>
+					<li><a href="#">Camping</a></li>
+					<li><a href="#">Kayaking</a></li>
+					<li><a href="#">Cycling</a>
+						<ul>
+							<li>For beginners</li>
+							<li>For advanced</li>
+							<li>For professionals</li>
+						</ul>
+					</li>
+					<li><a href="#">Mountaineering</a></li>
+					<li><a href="#">Caving</a></li>
+				</ul>
+			</li>
 		</ul>
 	</header>
 	<section>
