add links for cycling submenu

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<li><a href="#">Kayaking</a></li>
 					<li><a href="#">Cycling</a>
 						<ul>
-							<li>For beginners</li>
-							<li>For advanced</li>
-							<li>For professionals</li>
+							<li><a href="#">For beginners</a></li>
+							<li><a href="#">For advanced</a></li>
+							<li><a href="#">For professionals<a/></li>
 						</ul>
 					</li>
 					<li><a href="#">Mountaineering</a></li>
