--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
 					<li><a href="#">Kayaking</a></li>
 					<li><a href="#">Cycling</a>
 						<ul>
-							<li>For beginners</li>
-							<li>For advanced</li>
-							<li>For professionals</li>
+							<li><a href="#">For beginners</li>
+							<li><a href="#">For advanced</li>
+							<li><a href="#">For professionals</li>
 						</ul>
 					</li>
 					<li><a href="#">Mountaineering</a></li>
