add why join our club section to trips page

--- a/trips.html
+++ b/trips.html
@@ -55,6 +55,11 @@
 			<a href="#">LEARN MORE</a>
 		</div>
 	</section>
+	<section>
+		<h1>Why Join Our Club?</h1>
+		<p>In our busy world it isn’t always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best and most interesting hiking clubs in this part of the country, with an endless array of hikes to choose from on weekends year-round, and hundreds of fellow-members to meet and share memorable times with while hiking in the most scenic natural areas.</p>
+		<a href="#">LEARN MORE</a>
+	</section>
 
 	<section>
 			<ul>
