add trips and workshops section to trip page

--- a/trips.html
+++ b/trips.html
@@ -60,6 +60,25 @@
 		<p>In our busy world it isn’t always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best and most interesting hiking clubs in this part of the country, with an endless array of hikes to choose from on weekends year-round, and hundreds of fellow-members to meet and share memorable times with while hiking in the most scenic natural areas.</p>
 		<a href="#">LEARN MORE</a>
 	</section>
+	<section>
+		<h1>Guided Trips and Workshops</h1>
+		<img src="img/skills_workshops.jpg" alt="backpack on a ledge">
+		<h2>Skills Workshops</h2>
+		<p>Our Education department offers a wide variety of skills courses from entry level courses like Beginner, Intro to Kayaking, Map and Compass Fundamentals.</p>
+
+		<img src="img/paddling_programs.jpg" alt="father and son wooden pier fishing">
+		<h2>Paddling Programs</h2>
+		<p>Come spend a day on the water with us! We offer a variety of paddling courses and trips that will help you experience the natural world from the water.</p>
+
+		<img src="img/guided_hikes.jpg" alt="hiker on a boulder">
+		<h2>Guided Hikes</h2>
+		<p>Join us for a wide variety of guided hikes and backpacking trips. Whether you are working on your 46 high peaks or just looking for a group of people to hike with.</p>
+
+		<img src="img/first_aid_courses.jpg" alt="EMT with an injured man on a stretcher">
+		<h2>First Aid Courses</h2>
+		<p>First Aid courses through Wilderness Medical Associates throughout the year. These courses will help you prepare for an emergency when you are miles from help.</p>
+
+	</section>
 
 	<section>
 			<ul>
