--- a/about.html
+++ b/about.html
@@ -180,10 +180,8 @@
 	</section>
 	<section>
 		<h1>Testimonials</h1>
-		<blockquote>
-			"A great time and value. Set in a beautiful area of the park. An experience to remember for a lifetime for not only myself, but my kids and their cousins as well!"
-			<p>Mark Johnson</p>
-		</blockquote>
+		<q>A great time and value. Set in a beautiful area of the park. An experience to remember for a lifetime for not only myself, but my kids and their cousins as well!</q>
+		<p>Mark Johnson</p>
 	</section>
 
 	<section>
