--- a/index.html
+++ b/index.html
@@ -126,17 +126,13 @@
 		<h1>Testimonials</h1>
 		<div>
 			<img src="img/nelson-smith.jpg" alt="Nelson Smith">
-			<blockquote>
-				In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.
-				<p>&#45 Nelson Smith</p>
-			</blockquote>
+			<q>In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.</q>
+			<p>&#45 Nelson Smith</p>
 		</div>
 		<div>
 			<img src="img/melina-jones.jpg" alt="Melina Jones">
-			<blockquote>
-				This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.
-				<p>&#45 Melina Jones</p>
-			</blockquote>
+			<q>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</q>
+			<p>&#45 Melina Jones</p>
 		</div>
 	</section>
 
