--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
 					<li><a href="#">Caving</a></li>
 				</ul>
 			</li>
+			<li><a href="gallery.html">Gallery</a></li>
 		</ul>
 	</header>
 	<section>
