add gallery to bottom navigation and update links

--- a/gallery.html
+++ b/gallery.html
@@ -33,5 +33,30 @@
 			<li><a href="#">Gallery</a></li>
 		</ul>
 	</header>
+
+	<section>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About Club</a></li>
+				<li><a href="trips.html">Trip Schedule</a></li>
+				<li><a href="#">Gallery</a></li>
+			</ul>
+			<address>
+				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
+				<p>28 JACKSON BLVD<br>STE 151, CHICAGO<br>IL 60604-2340</p>
+			
+				<i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
+				<p><a href="mailto:mail@demolink.com">mail&#64demolink.com</a></p>
+			</address>
+
+			<ul>
+				<li><i class="fa fa-youtube fa-4x" aria-hidden="true"></i></li>
+				<li><i class="fa fa-tumblr fa-4x" aria-hidden="true"></i></li>
+				<li><i class="fa fa-twitter fa-4x" aria-hidden="true"></i></li>
+				<li><i class="fa fa-facebook fa-4x" aria-hidden="true"></i></li>
+				<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
+			</ul>
+			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
+	</section>
 </body>
 </html>
