--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 			<li><a href="#">Home</a></li>
 			<li><a href="about.html">About Club</a></li>
 			<li><a href="trips.html">Trip Schedule</a></li>
+			<li><a href="gallery.html">Gallery</a></li>
 		</ul>
 		<address>
 			<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
