--- a/about.html
+++ b/about.html
@@ -187,9 +187,10 @@
 
 	<section>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="about.html">About Club</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#">About Club</a></li>
 				<li><a href="trips.html">Trip Schedule</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
 			</ul>
 			<address>
 				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
@@ -206,9 +207,8 @@
 				<li><i class="fa fa-facebook fa-4x" aria-hidden="true"></i></li>
 				<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
 			</ul>
-			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
-			
-		</section>
+			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>		
+	</section>
 
 </body>
 </html>
