--- a/trips.html
+++ b/trips.html
@@ -82,9 +82,10 @@
 
 	<section>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
-				<li><a href="trips.html">Trip Schedule</a></li>
+				<li><a href="#">Trip Schedule</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
 			</ul>
 			<address>
 				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
