adjust image with title markup

--- a/index.html
+++ b/index.html
@@ -62,23 +62,22 @@
 	
 	<section>
 		<h1>Our Adventures</h1>
-		<figure>
+		<div>
 			<img src="img/rafting.jpg" alt="rafting">
-			<figcaption>Rafting</p>
-			</figcaption>
-		</figure>
-		<figure>
+			<a href="#">Rafting</a>
+		</div>
+		<div>
 			<img src="img/mountain-vistas.jpg" alt="mountain vistas">
-			<figcaption>Mountain vistas</figcaption>
-		</figure>
-		<figure>
+			<a href="#">Mountain vistas</a>
+		</div>
+		<div>
 			<img src="img/fishing.jpg" alt="fishing">
-			<figcaption>Fishing</figcaption>
-		</figure>
-		<figure>
+			<a href="#">Fishing</a>
+		</div>
+		<div>
 			<img src="img/backpacking.jpg" alt="backpacking">
-			<figcaption>Backpacking</figcaption>
-		</figure>
+			<a href="#">Backpacking</a>
+		</div>
 	</section>
 	
 	<section>
