add gallery images and titles

--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,41 @@
 			<li><a href="#">Gallery</a></li>
 		</ul>
 	</header>
+	<section>
+		<nav>
+			<a href="#">show all</a>
+			<a href="#">first category</a>
+			<a href="#">second category</a>
+			<a href="#">third category</a>
+		</nav>
+		<div>
+			<img src="img/dude_on_a_rock.jpg" alt="hiker on top of a rock">
+			<a href="#">Image 1</a>
+	
+			<img src="img/getting_wet.jpg" alt="white water rafting">
+			<a href="#">Image 2</a>
+	
+			<img src="img/hunting_for_rocks.jpg" alt="fly fishing">
+			<a href="#">Image 3</a>
+			
+			<img src="img/squirrel.jpg" alt="hiker pointing">
+			<a href="#">Image 4</a>
+
+			<img src="img/can_i_keep_it.jpg" alt="fisherman with his catch">
+			<a href="#">Image 5</a>
+
+			<img src="img/its_dark_yet_i_wear_shades.jpg" alt="nighttime fishing">
+			<a href="#">Image 6</a>
+
+			<img src="img/adrian.jpg" alt="hiker reaches top of mountain">
+			<a href="#">Image 7</a>
+
+			<img src="img/blackhawk_down.jpg" alt="hiker taking a photo of another hiker">
+			<a href="#">Image 8</a>
+		
+		</div>
+
+	</section>
 
 	<section>
 			<ul>
