add section join us on the beach to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -64,11 +64,15 @@
 
 			<img src="img/blackhawk_down.jpg" alt="hiker taking a photo of another hiker">
 			<a href="#">Image 8</a>
-		
 		</div>
-
 	</section>
-
+	<section>
+		<h1>Join Us On the Beach</h1>
+		<h2>Enjoy getting close to the nature? You're in the right place!</h2>
+		<p>We realize we are models for our clients behavior. We take minimal impact and Leave No Trace ethics seriously. We never use disposable plates or silverware for our trips, as an example. We strive to keep our group sizes relatively small when rock climbing to minimize our impact on other park users.</p>
+		<p>Cleanups are a fun, free, easy way to give back to your community by keeping pollution from entering the Pacific Ocean. It’s easy to participate – just register for one of our schedule cleanups, or request materials from our office to clean on your own! Volunteers are encouraged to Bring Your Own buckets, gloves, and reusable bags to decrease trash. Beach cleanups demonstrate how individuals of all ages can protect the marine environment by keeping our coastlines free from harmful pollution and debris.</p>
+		<img src="img/see_you_at_the_beach.jpg" alt="beach and ocean">
+	</section>
 	<section>
 			<ul>
 				<li><a href="index.html">Home</a></li>
