--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
 				</ul>
 			</li>
 			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="contacts.html">Contacts</a></li>
 		</ul>
 	</header>
 	<section>
