--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,7 @@
 				</ul>
 			</li>
 			<li><a href="#">Gallery</a></li>
+			<li><a href="contacts.html">Contacts</a></li>
 		</ul>
 	</header>
 	<section>
