--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				</ul>
 			</li>
 			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="contacts.html">Contacts</a></li>
 		</ul>
 	</header>
 	
