add top nav to contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<header>
+		<div>
+			<img src="img/logo.png" alt="logo">
+			<p>Hiking and Camping Club</p>
+		</div>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Club</a></li>
+			<li><a href="trips.html">Trip Schedule</a>
+				<ul>
+					<li><a href="#">Camping</a></li>
+					<li><a href="#">Kayaking</a></li>
+					<li><a href="#">Cycling</a>
+						<ul>
+							<li><a href="#">For beginners</a></li>
+							<li><a href="#">For advanced</a></li>
+							<li><a href="#">For professionals</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Mountaineering</a></li>
+					<li><a href="#">Caving</a></li>
+				</ul>
+			</li>
+			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="#">Contacts</a></li>
+		</ul>
+	</header>
 
 </body>
 </html>
