--- a/about.html
+++ b/about.html
@@ -192,6 +192,7 @@
 				<li><a href="#">About Club</a></li>
 				<li><a href="trips.html">Trip Schedule</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="contacts.html">Contacts</a></li>
 			</ul>
 			<address>
 				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
