--- a/gallery.html
+++ b/gallery.html
@@ -80,6 +80,7 @@
 				<li><a href="about.html">About Club</a></li>
 				<li><a href="trips.html">Trip Schedule</a></li>
 				<li><a href="#">Gallery</a></li>
+				<li><a href="contacts.html">Contacts</a></li>
 			</ul>
 			<address>
 				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
