--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
-	
+<body>	
 	<header>
 		<div>
 			<img src="img/logo.png" alt="logo">
@@ -140,6 +139,7 @@
 			<li><a href="about.html">About Club</a></li>
 			<li><a href="trips.html">Trip Schedule</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="contacts.html">Contacts</a></li>
 		</ul>
 		<address>
 			<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
