--- a/trips.html
+++ b/trips.html
@@ -87,6 +87,7 @@
 				<li><a href="about.html">About Club</a></li>
 				<li><a href="#">Trip Schedule</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="contacts.html">Contacts</a></li>
 			</ul>
 			<address>
 				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
