add address and contact info to contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -33,6 +33,24 @@
 			<li><a href="#">Contacts</a></li>
 		</ul>
 	</header>
+
+	<section>
+		<h1>Address</h1>
+		<p>Please note that we are unable to return long distance calls unless it is a toll-free number.<br> 
+		We accept cash and cheque only.</p>
+
+		<address>
+			<p>9870 St Vincent Place,<br>Glasgow, DC 45 Fr 45.</p>
+		</address>
+
+		<ul>
+			<li>Freephone:<a href="tel: +1 800 559 6580"> +1 800 559 6580</a></li>
+			<li>Telephone:<a href="tel: +1 800 603 6035"> +1 800 603 6035</a></li>
+			<li>FAX:<a href="fax: +1 800 889 9898"> +1 800 889 9898</a></li>
+			<li>E-mail: <a href="mailto:mail@demolink.com">mail&#64demolink.com</a></li>
+		</ul>
+
+	</section>
 	<section>
 			<ul>
 				<li><a href="index.html">Home</a></li>
