add contact form to contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -49,8 +49,18 @@
 			<li>FAX:<a href="fax: +1 800 889 9898"> +1 800 889 9898</a></li>
 			<li>E-mail: <a href="mailto:mail@demolink.com">mail&#64demolink.com</a></li>
 		</ul>
-
 	</section>
+
+	<form>
+		<h1>Contact Form</h1>
+		<input type="text" name="contact_name" placeholder="Name&#42;" aria-required="true" required />
+		<input type="email" name="contact_email" placeholder="Email&#42;" aria-required="true" required>
+		<input type="tel" name="contact_telephone" aria-required="false" placeholder="Phone">
+		<textarea name="contact_message" placeholder="Message&#42;" aria-required="true" required></textarea>
+		<button type="submit">SUBMIT COMMENT</button>
+		<span>required fields&#42;</span>
+	</form>
+
 	<section>
 			<ul>
 				<li><a href="index.html">Home</a></li>
