add contact title to page

--- a/contacts.html
+++ b/contacts.html
@@ -1,6 +1,6 @@
 <head>
 	<meta charset="UTF-8">
-	<title>Gallery - Hiking USA</title>
+	<title>Contact Us - Hiking USA</title>
 	<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
