--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,34 @@
 	<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script
+src="http://maps.googleapis.com/maps/api/js">
+</script>
+
+<script>
+var myCenter=new google.maps.LatLng(41.878178,-87.628964);
+
+function initialize()
+{
+var mapProp = {
+  center:myCenter,
+  zoom:5,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+var marker=new google.maps.Marker({
+  position:myCenter,
+  });
+
+marker.setMap(map);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
+
 </head>
 <body>
 	<header>
@@ -33,6 +61,11 @@
 			<li><a href="#">Contacts</a></li>
 		</ul>
 	</header>
+<div id="googleMap" style="width:500px;height:380px;"></div>
+
+
+<!-- 	<iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=place_id:EikyOCBXIEphY2tzb24gQmx2ZCwgQ2hpY2FnbywgSUwgNjA2MDQsIFVTQQ&key=AIzaSyDn_Kn8myjNs9q_ZTSVgoZs8hVcD-vzKa8" allowfullscreen></iframe> -->
 
 	<section>
 		<h1>Address</h1>
