refactor news and events on home page

--- a/index.html
+++ b/index.html
@@ -81,38 +81,32 @@
 		<h1>News &amp; Events</h1>
 		
 		<div>
-			<h2>12/10</h2>
-			<h2>Outdoor activities</h2>
+			<h2>12/10 <span>Outdoor activities</span></h2>
 			<p>Outdoor activity is leisure pursuits engaged in the outdoors, often in natural or semi-natural settings out of town.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>14/10</h2>
-			<h3>Backpacking</h3>
+			<h2>14/10 <span>Backpacking</span></h2>
 			<p>Backpacking may include wilderness adventures, local travel and travel to nearby counties while working from the country in which they are based.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>03/11</h2>
-			<h3>Mountaineering</h3>
+			<h2>03/11 <span>Mountaineering</span></h2>
 			<p>Mountaineering is the sport of attaining, or attempting to attain, high points in mountainous regions, mainly for the pleasure of the climb.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>12/10</h2>
-			<h3>Kayaking</h3>
+			<h2>12/10 <span>Kayaking</span></h2>
 			<p>It is distinguished from canoeing by the sitting position of the paddler and the number of blades on the paddle.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>12/12</h2>
-			<h3>Cycling</h3>
+			<h2>12/12 <span>Cycling</span></h2>
 			<p>Cycling is widely regarded as a very effective and efficient mode of transportation optimal for short to moderate distances.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>18/12</h2>
-			<h3>Hiking</h3>
+			<h2>18/12 <span>Hiking</span></h2>
 			<p>Hiking is the preferred term for a long, vigorous walk, while the word walking is used for shorter, particularly urban walks.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
