refactor news and events for trip schedule page

--- a/trips.html
+++ b/trips.html
@@ -39,20 +39,17 @@
 		<h1>News and Events from The Club</h1>
 		<p>As one of the leading names in the outdoor industry The Club is keen to keep members informed with news, events and latest safety information.</p>
 		<div>
-			<h2>11/10</h2>
-			<h3>Tent Survey</h3>
+			<h2>11/10 <span>Tent Survey</span></h2>
 			<p>The best people to tell you what a tent is like to own, camp with and maintain are its owners, who’ve bought them with their hard earned cash.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>09/10</h2>
-			<h3>Competitions</h3>
+			<h2>09/10 <span>Competitions</span></h2>
 			<p>Don’t forget, Club members also have exclusive competitions and discounts. Please read the terms and conditions for each competition.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
 		<div>
-			<h2>07/10</h2>
-			<h3>Eat Local</h3>
+			<h2>07/10 <span>Eat Local</span></h2>
 			<p>You'll find information on farm shops, farmers' markets and food festivals near to Club, Camping in the Forest and Certificated Sites.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
