--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script
+	src="http://maps.googleapis.com/maps/api/js">
+	</script>
+
+	<script>
+	var myCenter=new google.maps.LatLng(41.878178,-87.628964);
+
+	function initialize()
+	{
+	var mapProp = {
+	  center:myCenter,
+	  zoom:5,
+	  mapTypeId:google.maps.MapTypeId.ROADMAP
+	  };
+
+	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+	var marker=new google.maps.Marker({
+	  position:myCenter,
+	  });
+
+	marker.setMap(map);
+	}
+
+	google.maps.event.addDomListener(window, 'load', initialize);
+	</script>
 </head>
 
 <body>	
@@ -152,6 +178,7 @@
 		</ul>
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 	</section>
+	<div id="googleMap" style="width:500px;height:380px;"></div>
 
 </body>
 </html>
